dependencies für junit

--- a/haushaltsbuch-test/src/test/resources/cucumber.properties
+++ b/haushaltsbuch-test/src/test/resources/cucumber.properties
@@ -1,1 +1,1 @@
-cucumber.api.java.ObjectFactory = com.github.haschi.haushaltsbuch.infrastruktur.CustomPicoFactory
+cucumber.api.java.ObjectFactory = com.github.haschi.haushaltsbuch.infrastruktur.KomponententestPicoFactory
