--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.github.haschi.haushaltsbuch</groupId>
     <version>0.0.1-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
-    <name>${project.artifactId}-${project.version}</name>
+    <name>${project.artifactId}</name>
     <packaging>jar</packaging>
     <artifactId>infrastruktur</artifactId>
 
@@ -192,9 +192,21 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -256,12 +268,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                    <includes>
-                        <include>**/Test*.java</include>
-                        <include>**/*Test.java</include>
-                        <include>**/*Tests.java</include>
-                        <include>**/*TestCase.java</include>
-                    </includes>
+                    <systemPropertyVariables>
+                        <cucumber.api.java.ObjectFactory>com.github.haschi.haushaltsbuch.infrastruktur.KomponententestPicoFactory</cucumber.api.java.ObjectFactory>
+                    </systemPropertyVariables>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -269,12 +278,25 @@
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>${junit.platform.version}</version>
                     </dependency>
-                    <!--<dependency>-->
-                        <!--<groupId>org.junit.vintage</groupId>-->
-                        <!--<artifactId>junit-vintage-engine</artifactId>-->
-                        <!--<version>${junit.version}</version>-->
-                    <!--</dependency>-->
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <cucumber.api.java.ObjectFactory>com.github.haschi.haushaltsbuch.infrastruktur.SystemtestPicoFactory</cucumber.api.java.ObjectFactory>
+                    </systemPropertyVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
