--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.haschi.kata</groupId>
-    <artifactId>axon-blueprint</artifactId>
+    <groupId>com.github.haschi.haushaltsbuch</groupId>
+    <artifactId>haushaltsbuch-xxx</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
@@ -201,7 +201,7 @@
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
