--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -33,6 +33,12 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
+                <artifactId>haushaltsbuch-xxx</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
             <!-- TODO axon-dependencies.pom -->
             <dependency>
                 <groupId>org.axonframework</groupId>
@@ -99,6 +105,16 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.github.haschi.haushaltsbuch</groupId>
+            <artifactId>haushaltsbuch-xxx</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.vertx</groupId>
         <artifactId>vertx-core</artifactId>
         </dependency>
@@ -128,7 +144,6 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.jupiter.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -160,6 +175,7 @@
             <scope>test</scope>
 
         </dependency>
+
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
@@ -181,11 +197,13 @@
             <scope>test</scope>
 
         </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
