--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -21,6 +21,7 @@
         <!-- Das muss woanders hin -->
         <version.jboss.bom>10.0.1.Final</version.jboss.bom>
         <axon.version>3.0.5</axon.version>
+        <jackson.version>2.7.4</jackson.version>
         <cukes.version>1.2.5</cukes.version>
         <version.maven-surefire-plugin>2.18.1</version.maven-surefire-plugin>
         <sonar.language>java</sonar.language>
@@ -72,6 +73,17 @@
                 <version>1.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <!-- Testing -->
             <dependency>
                 <groupId>org.assertj</groupId>
@@ -163,6 +175,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
@@ -195,7 +217,7 @@
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java8</artifactId>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <dependency>
