--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -22,7 +22,7 @@
         <version.jboss.bom>10.0.1.Final</version.jboss.bom>
         <axon.version>3.0.5</axon.version>
         <jackson.version>2.7.4</jackson.version>
-        <cukes.version>1.2.5</cukes.version>
+        <cucumber.version>2.0.1</cucumber.version>
         <version.maven-surefire-plugin>2.18.1</version.maven-surefire-plugin>
         <sonar.language>java</sonar.language>
         <sonar.host.url>http://dh1:9000</sonar.host.url>
@@ -116,21 +116,19 @@
             </dependency>
 
             <dependency>
-                <groupId>info.cukes</groupId>
+                <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-java8</artifactId>
-                <version>${cukes.version}</version>
+                <version>${cucumber.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>info.cukes</groupId>
+                <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-junit</artifactId>
-                <version>${cukes.version}</version>
+                <version>${cucumber.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>info.cukes</groupId>
+                <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-picocontainer</artifactId>
-                <version>${cukes.version}</version>
+                <version>${cucumber.version}</version>
             </dependency>
 
             <!-- BOM -->
@@ -215,19 +213,23 @@
         </dependency>
 
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java8</artifactId>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
             <scope>test</scope>
         </dependency>
