--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -41,6 +41,12 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.haschi.haushaltsbuch</groupId>
+                <artifactId>application</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
             <!-- TODO axon-dependencies.pom -->
             <dependency>
                 <groupId>org.axonframework</groupId>
