--- a/haushaltsbuch-app/pom.xml
+++ b/haushaltsbuch-app/pom.xml
@@ -15,17 +15,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <skipFrontend>false</skipFrontend>
     </properties>
 
     <build>
-
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>com.github.eirslett</groupId>
-                    <artifactId>frontend-maven-plugin</artifactId>
-                    <version>1.3</version>
-                </plugin>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.0.0</version>
@@ -114,6 +109,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <skip>${skipFrontend}</skip>
                     <nodeVersion>v6.11.4</nodeVersion>
                     <npmVersion>5.4.2</npmVersion>
                 </configuration>
@@ -147,6 +143,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
+                    <skipAssembly>${skipFrontend}</skipAssembly>
                     <descriptors>
                         <descriptor>src/assembly/bin.xml</descriptor>
                     </descriptors>
@@ -162,43 +159,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--<plugin>-->
-            <!--<groupId>io.fabric8</groupId>-->
-            <!--<artifactId>docker-maven-plugin</artifactId>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>build</id>-->
-            <!--<phase>install</phase>-->
-            <!--<goals>-->
-            <!--<goal>build</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>clean</id>-->
-            <!--<phase>clean</phase>-->
-            <!--<goals>-->
-            <!--<goal>remove</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--<configuration>-->
-            <!--<showLogs>true</showLogs>-->
-            <!--<images>-->
-            <!--<image>-->
-            <!--<name>%g/%a:%l</name>-->
-            <!--<build>-->
-            <!--<dockerFileDir>${basedir}/target</dockerFileDir>-->
-            <!--</build>-->
-            <!--<run>-->
-            <!--<ports>-->
-            <!--<port>80:80</port>-->
-            <!--</ports>-->
-            <!--</run>-->
-            <!--</image>-->
-            <!--</images>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
         </plugins>
     </build>
 </project>
