--- a/haushaltsbuch-app/package.json
+++ b/haushaltsbuch-app/package.json
@@ -23,6 +23,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@covalent/core": "^1.0.0-beta.8-1",
+    "@covalent/dynamic-forms": "^1.0.0-beta.8-1",
+    "@covalent/highlight": "^1.0.0-beta.8-1",
+    "@covalent/http": "^1.0.0-beta.8-1",
+    "@covalent/markdown": "^1.0.0-beta.8-1",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -45,6 +50,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-scss-preprocessor": "^3.0.0",
+    "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
