--- a/haushaltsbuch-app/package.json
+++ b/haushaltsbuch-app/package.json
@@ -31,6 +31,7 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-currency-mask": "^4.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
