Command Bus bis ins Frontend hochgezogen

--- a/haushaltsbuch-app/pom.xml
+++ b/haushaltsbuch-app/pom.xml
@@ -149,6 +149,9 @@
                     </descriptors>
 
                     <finalName>haushaltsbuch-app-${pom.version}</finalName>
+                    <archive>
+
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
