--- a/haushaltsbuch-app/package.json
+++ b/haushaltsbuch-app/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,11 +28,13 @@
     "@covalent/highlight": "^1.0.0-beta.8-1",
     "@covalent/http": "^1.0.0-beta.8-1",
     "@covalent/markdown": "^1.0.0-beta.8-1",
+    "@types/vertx3-eventbus-client": "^3.4.0",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-currency-mask": "^4.4.1",
     "rxjs": "^5.4.2",
+    "vertx3-eventbus-client": "3.5.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
