--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -68,6 +68,13 @@
             </dependency>
 
             <dependency>
+                <groupId>org.immutables</groupId>
+                <artifactId>builder</artifactId>
+                <version>2.5.5</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>org.javamoney</groupId>
                 <artifactId>moneta</artifactId>
                 <version>1.0</version>
@@ -170,6 +177,12 @@
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>builder</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
