Geheimnis der Wrapper Serialisierung gelüftet

--- a/infrastruktur/pom.xml
+++ b/infrastruktur/pom.xml
@@ -146,6 +146,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>builder</artifactId>
+            <scope>provided</scope>
+            <version>2.5.5</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
