--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -43,16 +43,11 @@
                 <artifactId>axon-core</artifactId>
                 <version>${axon.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.axonframework</groupId>
                 <artifactId>axon-test</artifactId>
                 <version>${axon.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>io.javaslang</groupId>
-                <artifactId>javaslang</artifactId>
-                <version>2.0.6</version>
             </dependency>
 
             <!-- Tools -->
@@ -61,19 +56,6 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.6</version>
             </dependency>
-
-            <dependency>
-                <groupId>org.immutables</groupId>
-                <artifactId>value</artifactId>
-                <version>2.5.5</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.immutables</groupId>
-                <artifactId>builder</artifactId>
-                <version>2.5.5</version>
-            </dependency>
-
 
             <dependency>
                 <groupId>org.javamoney</groupId>
@@ -92,6 +74,7 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+
             <!-- Testing -->
             <dependency>
                 <groupId>org.assertj</groupId>
@@ -128,11 +111,13 @@
                 <artifactId>cucumber-java8</artifactId>
                 <version>${cucumber.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-junit</artifactId>
                 <version>${cucumber.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>io.cucumber</groupId>
                 <artifactId>cucumber-picocontainer</artifactId>
@@ -151,6 +136,7 @@
             <artifactId>axon-core</artifactId>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-test</artifactId>
@@ -158,32 +144,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.javaslang</groupId>
-            <artifactId>javaslang</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.javamoney</groupId>
             <artifactId>moneta</artifactId>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.immutables</groupId>
-            <artifactId>value</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.immutables</groupId>
-            <artifactId>builder</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -232,6 +195,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
             <scope>test</scope>
@@ -242,16 +206,19 @@
             <artifactId>gherkin</artifactId>
             <version>4.1.3</version>
         </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-picocontainer</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jre8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
@@ -263,6 +230,8 @@
 
 
     <build>
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -309,12 +278,12 @@
                 </executions>
             </plugin>
 
-
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.2</version>
             </plugin>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -343,42 +312,12 @@
                                 <source>src/test/kotlin</source>
                             </sourceDirs>
                         </configuration>
-
                     </execution>
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <phase>compile</phase>
-                    </execution>
-                    <execution>
-                        <id>default-testCompile</id>
-                        <phase>test-compile</phase>
-                    </execution>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
 
