--- a/haushaltsbuch/pom.xml
+++ b/haushaltsbuch/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.haschi.haushaltsbuch</groupId>
-    <artifactId>haushaltsbuch-xxx</artifactId>
+    <artifactId>haushaltsbuch-domaene</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
