Test Template für die Serialisierung und Deserialisierung von Anweisungen, Ereignissen und Ansichten
Architektur Refactoring

--- a/haushaltsbuch-domain/pom.xml
+++ b/haushaltsbuch-domain/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.haschi.haushaltsbuch</groupId>
-    <artifactId>haushaltsbuch-domaene</artifactId>
+    <artifactId>haushaltsbuch-domain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
